--- a/app/src/modules/views/index.html
+++ b/app/src/modules/views/index.html
@@ -9,8 +9,25 @@
 	</head>
 	<body>
 		<header class="header">
-			<div class="container">
-
+			<div class="header__container container">
+				<div class="header__logo-wrapper">
+					<a href="/" class="header__logo logo" target="_self">Tasker</a>
+				</div>
+				<nav class="header__menu-wrapper">
+					<ul class="header__menu">
+						<li class="header__menu-item">
+							<a href="#" class="header__menu-link" target="_self">Войти</a>
+						</li>
+						<li class="header__menu-item">
+							<a href="#" class="header__menu-link" target="_self">Регистрация</a>
+						</li>
+					</ul>
+				</nav>
+				<!--<div class="header__burger-button">
+					<span class="header__burger-button-line"></span>
+					<span class="header__burger-button-line"></span>
+					<span class="header__burger-button-line"></span>
+				</div>-->
 			</div>
 		</header>
 		<main class="main">
