--- a/app/static/scss/app.scss
+++ b/app/static/scss/app.scss
@@ -2,6 +2,8 @@
 
 @use "./_resources/utils/reset";
 
+@use "./_resources/utils/globals";
+
 @use "./_interfaces/header";
 
 @use "./_interfaces/main";
