--- a/app/static/scss/_resources/mixins/_size.scss
+++ b/app/static/scss/_resources/mixins/_size.scss
@@ -1,24 +1,24 @@
-@mixin objectSizeNormal($width, $height) {
-	width: calc(#{$width}vw + #{$width}vh);
-	height: calc(#{$height}vw + #{$height}vh);
+@mixin objectSize($width, $height) {
+	width: $width;
+	height: $height;
 }
 
 @mixin objectSizeProportional($width, $height) {
-	width: calc(#{$width}vw + #{$width}vh);
+	width: $width;
 	aspect-ratio: $height;
 }
 
-@mixin objectSizePercentage($width, $height) {
-	width: $width * 1%;
-	height: $height * 1%;
-}
-
-@mixin objectSizePercentageWidth($width, $height) {
-	width: $width * 1%;
+@mixin objectSizeCalc($width, $height) {
+	width: calc(#{$width}vw + #{$width}vh);
 	height: calc(#{$height}vw + #{$height}vh);
 }
 
-@mixin objectSizePercentageHeight($width, $height) {
+@mixin objectSizeCalcHeight($width, $height) {
+	width: $width;
+	height: calc(#{$height}vw + #{$height}vh);
+}
+
+@mixin objectSizeProportionalCalc($width, $height) {
 	width: calc(#{$width}vw + #{$width}vh);
-	height: $height * 1%;
+	aspect-ratio: $height;
 }
