--- a/app/src/modules/views/index.html
+++ b/app/src/modules/views/index.html
@@ -18,8 +18,8 @@
 						<li class="header__menu-item">
 							<a href="#" class="header__menu-link" target="_self">Войти</a>
 						</li>
-						<li class="header__menu-item">
-							<a href="#" class="header__menu-link" target="_self">Регистрация</a>
+						<li class="header__menu-item header__menu-item--yellow">
+							<a href="#" class="header__menu-link header__menu-link--yellow" target="_self">Регистрация</a>
 						</li>
 					</ul>
 				</nav>
