--- a/app/static/scss/_resources/tokens/_colors.scss
+++ b/app/static/scss/_resources/tokens/_colors.scss
@@ -1,1 +1,14 @@
-$lightBlue: rgba(0, 200, 255, .7);
+$darkBlue: rgba(0, 0, 10, .8);
+$mediumDarkBlue: rgba(0, 0, 30, .9);
+
+$white: rgb(255, 255, 255);
+$darkWhite: rgb(175, 175, 175);
+
+$yellow: rgb(255, 255, 0);
+$darkYellow: rgb(200, 200, 0);
+
+$grey: rgb(100, 100, 100);
+$darkGrey: rgba(10, 10, 10, .6);
+$lightGrey: rgba(50, 50, 50, .3);
+
+$black: rgb(0, 0, 0);
