--- a/app/static/scss/_resources/utils/_globals.scss
+++ b/app/static/scss/_resources/utils/_globals.scss
@@ -4,3 +4,7 @@
 @use "../mixins/size" as size;
 @use "../tokens/variables" as var;
 @use "../tokens/colors" as color;
+
+body {
+	background-color: color.$mediumDarkBlue;
+}
