--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,6 +1,23 @@
 @font-face {
-  font-family: "#";
-  src: url(#);
+  font-family: "InterMedium";
+  src: url("../../../fonts/Inter18pt-Medium.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "InterRegular";
+  src: url("../../../fonts/Inter18pt-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "InterItalic";
+  src: url("../../../fonts/Inter18pt-Italic.woff2") format("woff2");
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
 }
 * {
   margin: 0;
@@ -13,6 +30,10 @@
   line-height: 1;
 }
 
+body {
+  background-color: rgba(0, 0, 30, 0.9);
+}
+
 .header {
   display: flex;
   flex-direction: row;
@@ -21,8 +42,9 @@
   align-items: center;
   width: 100vw;
   height: calc(4vw + 4vh);
-  background-color: rgba(0, 200, 255, 0.7);
-  padding-inline: calc(1vw + 1vh);
+  padding-inline: calc(1.2vw + 1.2vh);
+  background-color: rgba(0, 0, 10, 0.8);
+  border-bottom: calc(0.08vw + 0.08vh) solid rgb(100, 100, 100);
 }
 .header__container {
   display: flex;
@@ -32,11 +54,14 @@
   align-items: center;
   width: 75%;
   height: 100%;
-  padding-inline: calc(1vw + 1vh);
+  padding-inline: calc(1.2vw + 1.2vh);
 }
 .header__logo {
-  font-size: calc(1vw + 1vh);
+  font-family: "InterItalic", sans-serif;
+  font-style: italic;
+  font-size: calc(2.1vw + 2.1vh);
   font-weight: 600;
+  color: rgb(255, 255, 255);
 }
 .header__menu {
   display: inline-flex;
@@ -47,13 +72,65 @@
   height: 100%;
 }
 .header__menu-item {
-  margin-inline: calc(1vw + 1vh);
-  padding: calc(0.5vw + 0.5vh);
-  background-color: antiquewhite;
+  margin-inline: calc(0.6vw + 0.6vh);
+  padding: calc(0.3vw + 0.3vh) 0;
+  background-color: rgb(255, 255, 255);
+  border: calc(0.08vw + 0.08vh) solid rgba(50, 50, 50, 0.3);
+  border-radius: calc(0.16vw + 0.16vh);
+  transition-property: background-color;
+  transition-duration: 200ms;
+  cursor: pointer;
+}
+@media (hover: hover) {
+  .header__menu-item:hover {
+    background-color: rgb(175, 175, 175);
+  }
+}
+@media (hover: none) {
+  .header__menu-item:active {
+    background-color: rgb(175, 175, 175);
+  }
+}
+.header__menu-item--yellow {
+  background-color: rgb(255, 255, 0);
+  border: calc(0.08vw + 0.08vh) solid transparent;
+  transition-property: background-color, border-color;
+  transition-duration: 200ms, 200ms;
+}
+@media (hover: hover) {
+  .header__menu-item--yellow:hover {
+    border-color: rgb(255, 255, 0);
+    background-color: rgb(0, 0, 0);
+  }
+}
+@media (hover: none) {
+  .header__menu-item--yellow:active {
+    border-color: rgb(255, 255, 0);
+    background-color: rgb(0, 0, 0);
+  }
 }
 .header__menu-link {
-  font-size: calc(1vw + 1vh);
-  font-weight: 600;
+  font-family: "InterRegular", sans-serif;
+  font-style: normal;
+  font-size: calc(1.1vw + 1.1vh);
+  font-weight: 500;
+  height: 100%;
+  padding: calc(0.3vw + 0.3vh) calc(0.9vw + 0.9vh);
+  color: rgb(0, 0, 0);
+}
+.header__menu-link--yellow {
+  transition-property: color;
+  transition-duration: 200ms;
+}
+@media (hover: hover) {
+  .header__menu-link--yellow:hover {
+    color: rgb(255, 255, 0);
+  }
+}
+@media (hover: none) {
+  .header__menu-link--yellow:active {
+    color: rgb(255, 255, 0);
+  }
 }
 
 /*# sourceMappingURL=app.css.map */
