--- a/app/src/modules/views/index.html
+++ b/app/src/modules/views/index.html
@@ -11,7 +11,7 @@
 		<header class="header">
 			<div class="header__container container">
 				<div class="header__logo-wrapper">
-					<a href="/" class="header__logo logo" target="_self">Tasker</a>
+					<a href="#" class="header__logo logo" target="_self">Tasker</a>
 				</div>
 				<nav class="header__menu-wrapper">
 					<ul class="header__menu">
