--- a/app/static/scss/_resources/tokens/_colors.scss
+++ b/app/static/scss/_resources/tokens/_colors.scss
@@ -7,6 +7,8 @@ $darkWhite: rgb(175, 175, 175);
 $yellow: rgb(255, 255, 0);
 $darkYellow: rgb(200, 200, 0);
 
+$blue: rgb(75, 75, 255);
+
 $grey: rgb(100, 100, 100);
 $darkGrey: rgba(10, 10, 10, .6);
 $lightGrey: rgba(50, 50, 50, .3);
