--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -42,9 +42,9 @@ body {
   align-items: center;
   width: 100vw;
   height: calc(4vw + 4vh);
-  padding-inline: calc(1.2vw + 1.2vh);
+  padding-inline: calc(1vw + 1vh);
   background-color: rgba(0, 0, 10, 0.8);
-  border-bottom: calc(0.08vw + 0.08vh) solid rgb(100, 100, 100);
+  border-bottom: calc(0.12vw + 0.12vh) solid rgb(100, 100, 100);
 }
 .header__container {
   display: flex;
@@ -52,9 +52,9 @@ body {
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
-  width: 75%;
+  width: 80%;
   height: 100%;
-  padding-inline: calc(1.2vw + 1.2vh);
+  padding-inline: calc(1vw + 1vh);
 }
 .header__logo {
   font-family: "InterItalic", sans-serif;
@@ -62,6 +62,18 @@ body {
   font-size: calc(2.1vw + 2.1vh);
   font-weight: 600;
   color: rgb(255, 255, 255);
+  transition-property: color;
+  transition-duration: 200ms;
+}
+@media (hover: hover) {
+  .header__logo:hover {
+    color: rgb(75, 75, 255);
+  }
+}
+@media (hover: none) {
+  .header__logo:active {
+    color: rgb(75, 75, 255);
+  }
 }
 .header__menu {
   display: inline-flex;
@@ -71,65 +83,55 @@ body {
   align-items: center;
   height: 100%;
 }
-.header__menu-item {
-  margin-inline: calc(0.6vw + 0.6vh);
-  padding: calc(0.3vw + 0.3vh) 0;
-  background-color: rgb(255, 255, 255);
-  border: calc(0.08vw + 0.08vh) solid rgba(50, 50, 50, 0.3);
-  border-radius: calc(0.16vw + 0.16vh);
-  transition-property: background-color;
-  transition-duration: 200ms;
-  cursor: pointer;
-}
-@media (hover: hover) {
-  .header__menu-item:hover {
-    background-color: rgb(175, 175, 175);
-  }
-}
-@media (hover: none) {
-  .header__menu-item:active {
-    background-color: rgb(175, 175, 175);
-  }
-}
-.header__menu-item--yellow {
-  background-color: rgb(255, 255, 0);
-  border: calc(0.08vw + 0.08vh) solid transparent;
-  transition-property: background-color, border-color;
-  transition-duration: 200ms, 200ms;
-}
-@media (hover: hover) {
-  .header__menu-item--yellow:hover {
-    border-color: rgb(255, 255, 0);
-    background-color: rgb(0, 0, 0);
-  }
-}
-@media (hover: none) {
-  .header__menu-item--yellow:active {
-    border-color: rgb(255, 255, 0);
-    background-color: rgb(0, 0, 0);
-  }
-}
 .header__menu-link {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
   font-family: "InterRegular", sans-serif;
   font-style: normal;
   font-size: calc(1.1vw + 1.1vh);
   font-weight: 500;
-  height: 100%;
+  margin-inline: calc(0.6vw + 0.6vh);
   padding: calc(0.3vw + 0.3vh) calc(0.9vw + 0.9vh);
-  color: rgb(0, 0, 0);
+  background-color: rgb(75, 75, 255);
+  border: calc(0.12vw + 0.12vh) solid transparent;
+  border-radius: calc(0.16vw + 0.16vh);
+  color: rgb(255, 255, 255);
+  transition-property: background-color, border-color, color;
+  transition-duration: 200ms, 200ms, 200ms;
+}
+@media (hover: hover) {
+  .header__menu-link:hover {
+    color: rgb(75, 75, 255);
+    border-color: rgb(75, 75, 255);
+    background-color: rgb(255, 255, 255);
+  }
+}
+@media (hover: none) {
+  .header__menu-link:active {
+    color: rgb(75, 75, 255);
+    border-color: rgb(75, 75, 255);
+    background-color: rgb(255, 255, 255);
+  }
 }
 .header__menu-link--yellow {
-  transition-property: color;
-  transition-duration: 200ms;
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 0);
 }
 @media (hover: hover) {
   .header__menu-link--yellow:hover {
     color: rgb(255, 255, 0);
+    border-color: rgb(255, 255, 0);
+    background-color: rgb(0, 0, 0);
   }
 }
 @media (hover: none) {
   .header__menu-link--yellow:active {
     color: rgb(255, 255, 0);
+    border-color: rgb(255, 255, 0);
+    background-color: rgb(0, 0, 0);
   }
 }
 
