--- a/app/static/scss/_interfaces/_header.scss
+++ b/app/static/scss/_interfaces/_header.scss
@@ -15,58 +15,51 @@
 
 	&__container {
 		@include display.flexContainerBlock(row, nowrap, space-between, center);
-		@include size.objectSize(75%, 100%);
+		@include size.objectSize(80%, 100%);
 		padding-inline: func.viewportSum(var.$containerPaddingNormal);
 	}
 
 	&__logo {
 		@include font.fontConfigExtended('InterItalic', italic, var.$textSizeMedium, 600);
 		color: color.$white;
+		transition-property: color;
+		transition-duration: var.$fastDuration;
+
+		@include media.hoverEffect {
+			color: color.$blue;
+		}
 	}
 
 	&__menu {
 		@include display.flexContainerInline(row, nowrap, center, center);
 		height: 100%;
 
-		&-item {
+		&-link {
+			@include display.flexContainerInline(row, nowrap, center, center);
+			@include font.fontConfigExtended('InterRegular', normal, var.$textSizeNormal, 500);
 			margin-inline: func.viewportSum(.6);
-			padding: func.viewportSum(.3) 0;
-			background-color: color.$white;
-			border: func.viewportSum(var.$borderSizeNormal) solid color.$lightGrey;
+			padding: func.viewportSum(.3) func.viewportSum(.9);
+			background-color: color.$blue;
+			border: func.viewportSum(var.$borderSizeNormal) solid transparent;
 			border-radius: func.viewportSum(var.$borderRadiusNormal);
-			transition-property: background-color;
-			transition-duration: var.$fastDuration;
-			cursor: pointer;
+			color: color.$white;
+			transition-property: background-color, border-color, color;
+			transition-duration: var.$fastDuration, var.$fastDuration, var.$fastDuration;
 
 			@include media.hoverEffect {
-				background-color: color.$darkWhite;
+				color: color.$blue;
+				border-color: color.$blue;
+				background-color: color.$white;
 			}
 
 			&--yellow {
+				color: color.$black;
 				background-color: color.$yellow;
-				border: func.viewportSum(var.$borderSizeNormal) solid transparent;
-				transition-property: background-color, border-color;
-				transition-duration: var.$fastDuration, var.$fastDuration;
-	
-				@include media.hoverEffect {
-					border-color: color.$yellow;
-					background-color: color.$black;
-				}
-			}
-		}
-
-		&-link {
-			@include font.fontConfigExtended('InterRegular', normal, var.$textSizeNormal, 500);
-			height: 100%;
-			padding: func.viewportSum(.3) func.viewportSum(.9);
-			color: color.$black;
-
-			&--yellow {
-				transition-property: color;
-				transition-duration: var.$fastDuration;
 
 				@include media.hoverEffect {
 					color: color.$yellow;
+					border-color: color.$yellow;
+					background-color: color.$black;
 				}
 			}
 		}
