--- a/app/static/scss/_resources/tokens/_variables.scss
+++ b/app/static/scss/_resources/tokens/_variables.scss
@@ -1,9 +1,16 @@
+/* TIME */
 $fastDuration: 200ms;
 
+/* BORDER */
+$borderSizeThin: .06;
 $borderSizeNormal: .12;
 $borderRadiusNormal: .16;
 
+/* PADDING */
 $containerPaddingNormal: 1;
 
+/* TEXT */
+$textSizeLow: .9;
 $textSizeNormal: 1.1;
+$textSizeButton: 1.2;
 $textSizeMedium: 2.1;
