--- a/app/static/scss/_resources/utils/_globals.scss
+++ b/app/static/scss/_resources/utils/_globals.scss
@@ -4,7 +4,8 @@
 @use "../mixins/size" as size;
 @use "../tokens/variables" as var;
 @use "../tokens/colors" as color;
+@use "../utils/functions" as func;
 
 body {
-	background-color: color.$mediumDarkBlue;
+	background-color: color.$mediumDarkGrey;
 }
