--- a/app/static/scss/_resources/tokens/_colors.scss
+++ b/app/static/scss/_resources/tokens/_colors.scss
@@ -1,3 +1,4 @@
+$blue: rgb(55, 75, 255);
 $darkBlue: rgba(0, 0, 10, .8);
 $mediumDarkBlue: rgba(0, 0, 30, .9);
 
@@ -5,12 +6,14 @@ $white: rgb(255, 255, 255);
 $darkWhite: rgb(175, 175, 175);
 
 $yellow: rgb(255, 255, 0);
+$lightYellow: rgb(255, 255, 220);
 $darkYellow: rgb(200, 200, 0);
 
-$blue: rgb(75, 75, 255);
-
 $grey: rgb(100, 100, 100);
-$darkGrey: rgba(10, 10, 10, .6);
+$darkGrey: rgb(20, 0, 40);
+$mediumDarkGrey: rgb(20, 0, 60);
 $lightGrey: rgba(50, 50, 50, .3);
 
 $black: rgb(0, 0, 0);
+
+$green: rgb(0, 235, 0);
