--- a/app/src/modules/views/index.html
+++ b/app/src/modules/views/index.html
@@ -2,7 +2,11 @@
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="description" content="Tasker - это удобный онлайн-задачник для организации ваших задач.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="preload" href="/app/static/fonts/Inter18pt-Italic.woff2" as="font" type="font/woff2" crossorigin>
+		<link rel="preload" href="/app/static/fonts/Inter18pt-Medium.woff2" as="font" type="font/woff2" crossorigin>
+		<link rel="preload" href="/app/static/fonts/Inter18pt-Regular.woff2" as="font" type="font/woff2" crossorigin>
 		<link rel="image/x-icon" href="#">
 		<link rel="stylesheet" href="/app/static/css/app.css">
 		<title>Tasker | Задачник</title>
@@ -23,27 +27,27 @@
 						</li>
 					</ul>
 				</nav>
-				<!--<div class="header__burger-button">
+				<div class="header__burger-button" hidden>
 					<span class="header__burger-button-line"></span>
 					<span class="header__burger-button-line"></span>
 					<span class="header__burger-button-line"></span>
-				</div>-->
+				</div>
 			</div>
 		</header>
 		<main class="main">
 			<div class="main__container container">
-				<section class="main__sections">
-					<legend class="main__sections-header">Add new task</legend>
-					<form action="#" method="post" class="main__sections-form" enctype="text/plain">
-						<fieldset class="main__sections-field">
-							<label class="main__sections-title">Title</label>
-							<input type="text" class="main__sections-text main__inputs" placeholder="Your task`s title is..." maxlength="32" required>
+				<section class="sections">
+					<legend class="sections__header">Add new task</legend>
+					<form action="#" method="post" class="sections__form" enctype="text/plain">
+						<fieldset class="sections__field">
+							<label for="title" class="sections__title">Title</label>
+							<input id="title" name="title" type="text" class="sections__text main__inputs" placeholder="Your task`s title is..." maxlength="32" required>
 						</fieldset>
-						<fieldset class="main__sections-field">
-							<label class="main__sections-title">Task</label>
-							<textarea name="task" class="main__sections-task main__inputs" placeholder="Write what you want!" maxlength="128" required></textarea>
+						<fieldset class="sections__field">
+							<label for="task" class="sections__title">Task</label>
+							<textarea id="task" name="task" class="sections__task main__inputs" placeholder="Write what you want!" maxlength="128" required></textarea>
 						</fieldset>
-						<button type="submit" class="main__sections-submit button">Submit</button>
+						<button type="submit" class="sections__submit">Submit</button>
 					</form>
 				</section>
 			</div>
