--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,20 +1,20 @@
 @font-face {
   font-family: "InterMedium";
-  src: url("../../../fonts/Inter18pt-Medium.woff2") format("woff2");
+  src: url("../fonts/Inter18pt-Medium.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "InterRegular";
-  src: url("../../../fonts/Inter18pt-Regular.woff2") format("woff2");
+  src: url("../fonts/Inter18pt-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "InterItalic";
-  src: url("../../../fonts/Inter18pt-Italic.woff2") format("woff2");
+  src: url("../fonts/Inter18pt-Italic.woff2") format("woff2");
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -86,7 +86,7 @@ body {
   padding: calc(0.3vw + 0.3vh) calc(0.9vw + 0.9vh);
   background-color: rgb(55, 75, 255);
   border: calc(0.12vw + 0.12vh) solid transparent;
-  border-radius: calc(0.16vw + 0.16vh);
+  border-radius: calc(0.2vw + 0.2vh);
   color: rgb(255, 255, 255);
   transition-property: color, border-color, background-color;
   transition-duration: 200ms, 200ms, 200ms;
@@ -150,19 +150,20 @@ body {
   font-weight: 400;
   padding-inline: calc(0.5vw + 0.5vh);
   background-color: rgb(255, 255, 255);
-  border-radius: calc(0.16vw + 0.16vh);
+  border-radius: calc(0.2vw + 0.2vh);
   border: calc(0.12vw + 0.12vh) solid rgb(175, 175, 175);
 }
-.main__sections {
+
+.sections {
   display: inline-flex;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: center;
-  border-radius: calc(0.16vw + 0.16vh);
+  border-radius: calc(0.2vw + 0.2vh);
   background-color: rgb(255, 255, 220);
 }
-.main__sections-header {
+.sections__header {
   width: 100%;
   height: fit-content;
   font-family: monospace, sans-serif;
@@ -173,10 +174,10 @@ body {
   text-align: center;
   margin-bottom: calc(0.5vw + 0.5vh);
   background-color: rgb(55, 75, 255);
-  border-radius: calc(0.16vw + 0.16vh) calc(0.16vw + 0.16vh) 0 0;
+  border-radius: calc(0.2vw + 0.2vh) calc(0.2vw + 0.2vh) 0 0;
   color: rgb(255, 255, 255);
 }
-.main__sections-form {
+.sections__form {
   display: inline-flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -184,7 +185,7 @@ body {
   align-items: center;
   padding: calc(0.5vw + 0.5vh) calc(0.7vw + 0.7vh);
 }
-.main__sections-field {
+.sections__field {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -193,7 +194,7 @@ body {
   width: 100%;
   margin-bottom: calc(0.5vw + 0.5vh);
 }
-.main__sections-title {
+.sections__title {
   font-family: "InterRegular", sans-serif;
   font-style: normal;
   font-size: calc(1.1vw + 1.1vh);
@@ -201,18 +202,18 @@ body {
   margin-right: calc(0.5vw + 0.5vh);
   color: rgb(0, 0, 0);
 }
-.main__sections-text {
+.sections__text {
   width: 16vw;
   aspect-ratio: 7;
   margin-right: 9vw;
 }
-.main__sections-task {
+.sections__task {
   width: 25vw;
   aspect-ratio: 5;
   padding-top: calc(0.25vw + 0.25vh);
   resize: none;
 }
-.main__sections-submit {
+.sections__submit {
   width: 10vw;
   aspect-ratio: 4;
   font-family: "InterRegular", sans-serif;
@@ -221,13 +222,13 @@ body {
   font-weight: 500;
   background-color: rgb(0, 235, 0);
   color: rgb(255, 255, 255);
-  border-radius: calc(0.16vw + 0.16vh);
+  border-radius: calc(0.2vw + 0.2vh);
   border: calc(0.12vw + 0.12vh) solid transparent;
   transition-property: background-color, border-color, color;
   transition-duration: 200ms, 200ms, 200ms;
 }
 @media (hover: hover) {
-  .main__sections-submit:hover {
+  .sections__submit:hover {
     color: rgb(0, 235, 0);
     border-color: rgb(0, 235, 0);
     background-color: rgb(255, 255, 255);
@@ -235,7 +236,7 @@ body {
   }
 }
 @media (hover: none) {
-  .main__sections-submit:active {
+  .sections__submit:active {
     color: rgb(0, 235, 0);
     border-color: rgb(0, 235, 0);
     background-color: rgb(255, 255, 255);
