--- a/app/static/scss/_resources/utils/_fonts.scss
+++ b/app/static/scss/_resources/utils/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'InterMedium';
-    src: url('../../../fonts/Inter18pt-Medium.woff2') format('woff2');
+    src: url('../fonts/Inter18pt-Medium.woff2') format('woff2');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'InterRegular';
-    src: url('../../../fonts/Inter18pt-Regular.woff2') format('woff2');
+    src: url('../fonts/Inter18pt-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: 'InterItalic';
-    src: url('../../../fonts/Inter18pt-Italic.woff2') format('woff2');
+    src: url('../fonts/Inter18pt-Italic.woff2') format('woff2');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
