--- a/app/static/scss/_resources/tokens/_colors.scss
+++ b/app/static/scss/_resources/tokens/_colors.scss
@@ -9,6 +9,8 @@ $yellow: rgb(255, 255, 0);
 $lightYellow: rgb(255, 255, 220);
 $darkYellow: rgb(200, 200, 0);
 
+$pink: rgb(255, 170, 200);
+
 $grey: rgb(100, 100, 100);
 $darkGrey: rgb(20, 0, 40);
 $mediumDarkGrey: rgb(20, 0, 60);
@@ -17,3 +19,5 @@ $lightGrey: rgba(50, 50, 50, .3);
 $black: rgb(0, 0, 0);
 
 $green: rgb(0, 235, 0);
+
+$red: rgb(255, 10, 10);
