--- a/app/static/scss/_resources/tokens/_variables.scss
+++ b/app/static/scss/_resources/tokens/_variables.scss
@@ -1,15 +1,14 @@
-/* TIME */
 $fastDuration: 200ms;
 
-/* BORDER */
-$borderSizeThin: .06;
-$borderSizeNormal: .12;
-$borderRadiusNormal: .2;
+$borderSizeThin: .05;
+$borderSizeInputs: .12;
+$borderSizeNormal: .16;
 
-/* PADDING */
-$containerPaddingNormal: 1;
+$borderRadiusInputs: .12;
+$borderRadiusNormal: .16;
 
-/* TEXT */
+$containerPaddingNormal: 1.2;
+
 $textSizeLow: .9;
 $textSizeNormal: 1.1;
 $textSizeButton: 1.2;
