--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -30,8 +30,21 @@
   line-height: 1;
 }
 
+html {
+  width: 100vw;
+  height: 100vh;
+}
+
 body {
+  width: 100%;
+  height: 100%;
+  position: relative;
   background-color: rgb(20, 0, 60);
+}
+
+.container {
+  width: 80%;
+  padding-inline: calc(1.2vw + 1.2vh);
 }
 
 .header {
@@ -51,9 +64,6 @@ body {
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
-  width: 80%;
-  height: 100%;
-  padding-inline: calc(1.2vw + 1.2vh);
 }
 .header__logo {
   font-family: "InterItalic", sans-serif;
@@ -134,9 +144,6 @@ body {
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: flex-start;
-  width: 80%;
-  height: fit-content;
-  padding-inline: calc(1.2vw + 1.2vh);
   padding-top: calc(2vw + 2vh);
 }
 .main__inputs {
@@ -277,6 +284,35 @@ body {
     background-color: rgb(0, 0, 0);
     border-color: rgb(255, 10, 10);
   }
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  background-color: rgb(20, 0, 40);
+  border-top: calc(0.05vw + 0.05vh) solid rgb(175, 175, 175);
+  position: absolute;
+  bottom: 0;
+}
+.footer__container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer__text {
+  font-family: monospace, sans-serif;
+  font-style: normal;
+  font-size: calc(0.9vw + 0.9vh);
+  font-weight: 400;
+  display: inline-block;
+  padding: calc(0.8vw + 0.8vh) 0;
+  color: rgb(255, 255, 255);
 }
 
 /*# sourceMappingURL=app.css.map */
