--- a/app/static/scss/_resources/utils/_globals.scss
+++ b/app/static/scss/_resources/utils/_globals.scss
@@ -1,11 +1,13 @@
-@use "../mixins/display" as display;
-@use "../mixins/font" as font;
-@use "../mixins/media" as media;
-@use "../mixins/size" as size;
-@use "../tokens/variables" as var;
 @use "../tokens/colors" as color;
-@use "../utils/functions" as func;
+
+html {
+	width: 100vw;
+	height: 100vh;
+}
 
 body {
+	width: 100%;
+	height: 100%;
+	position: relative;
 	background-color: color.$mediumDarkGrey;
 }
