--- a/app/src/modules/views/index.html
+++ b/app/src/modules/views/index.html
@@ -40,7 +40,7 @@
 			<div class="main__container container">
 				<section class="sections">
 					<legend class="sections__header">Add new task</legend>
-					<form action="#" method="post" class="sections__form" enctype="text/plain">
+					<form action="/home" method="post" class="sections__form" enctype="text/plain">
 						<fieldset class="sections__field">
 							<label for="title" class="sections__title">Title</label>
 							<input id="title" name="title" type="text" class="sections__text main__inputs" placeholder="Your task`s title is..." maxlength="32" required>
@@ -56,7 +56,7 @@
 					<legend class="sections__header">Tasks list</legend>
 					<div class="sections__tasks-list">
 						<!--TASKS-->
-						<form action="#" method="post" class="sections__form sections__form--task" enctype="text/plain">
+						<form action="/home" method="post" class="sections__form sections__form--task" enctype="text/plain">
 							<fieldset class="sections__field">
 								<label class="sections__title">Title</label>
 								<input name="title" type="text" class="sections__text main__inputs" value="" disabled>
@@ -67,7 +67,7 @@
 							</fieldset>
 							<button type="submit" class="sections__submit sections__submit--delete">Delete</button>
 						</form>
-						<form action="#" method="post" class="sections__form sections__form--task" enctype="text/plain">
+						<form action="/home" method="post" class="sections__form sections__form--task" enctype="text/plain">
 							<fieldset class="sections__field">
 								<label class="sections__title">Title</label>
 								<input name="title" type="text" class="sections__text main__inputs" value="" disabled>
