--- a/app/src/modules/views/index.html
+++ b/app/src/modules/views/index.html
@@ -59,23 +59,13 @@
 						<form action="/home" method="post" class="sections__form sections__form--task" enctype="text/plain">
 							<fieldset class="sections__field">
 								<label class="sections__title">Title</label>
-								<input name="title" type="text" class="sections__text main__inputs" value="" disabled>
+								<input type="text" class="sections__text main__inputs" value="" disabled>
 							</fieldset>
 							<fieldset class="sections__field">
 								<label class="sections__title">Task</label>
-								<textarea name="task" class="sections__text sections__text--task main__inputs" disabled></textarea>
+								<textarea class="sections__text sections__text--task main__inputs" disabled></textarea>
 							</fieldset>
-							<button type="submit" class="sections__submit sections__submit--delete">Delete</button>
-						</form>
-						<form action="/home" method="post" class="sections__form sections__form--task" enctype="text/plain">
-							<fieldset class="sections__field">
-								<label class="sections__title">Title</label>
-								<input name="title" type="text" class="sections__text main__inputs" value="" disabled>
-							</fieldset>
-							<fieldset class="sections__field">
-								<label class="sections__title">Task</label>
-								<textarea name="task" class="sections__text sections__text--task main__inputs" disabled></textarea>
-							</fieldset>
+							<input name="id" type="text" value="#" disabled hidden>
 							<button type="submit" class="sections__submit sections__submit--delete">Delete</button>
 						</form>
 						<!--END-->
