--- a/app/src/modules/views/index.html
+++ b/app/src/modules/views/index.html
@@ -16,15 +16,15 @@
 		<header class="header">
 			<div class="header__container container">
 				<div class="header__logo-wrapper">
-					<a href="#" class="header__logo logo" target="_self">Tasker</a>
+					<a href="/home" title="Home" class="header__logo logo" target="_self">Tasker</a>
 				</div>
 				<nav class="header__nav">
 					<ul class="header__menu">
 						<li class="header__menu-item">
-							<a href="#" class="header__menu-link" target="_self">Log in</a>
+							<a href="/login" class="header__menu-link" target="_self">Log in</a>
 						</li>
 						<li class="header__menu-item">
-							<a href="#" class="header__menu-link header__menu-link--yellow" target="_self">Registration</a>
+							<a href="/registration" class="header__menu-link header__menu-link--yellow" target="_self">Registration</a>
 						</li>
 					</ul>
 				</nav>
@@ -76,8 +76,11 @@
 
 		<footer class="footer">
 			<div class="footer__container container">
-				<span class="footer__icon"></span>
-				<p class="footer__text">Created by Timur &copy;</p>
+				<span class="footer__icons-inner">
+					<a href="https://github.com/TimurDev-hub" title="GitHub" target="_blank" class="footer__icon"></a>
+					<a href="https://x.com" title="Twitter" target="_blank" class="footer__icon"></a>
+				</span>
+				<p title="Creator" class="footer__text">Created by Timur &copy;</p>
 			</div>
 		</footer>
 
