--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -305,13 +305,28 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+.footer__icons-inner {
+  display: flex;
+}
+.footer__icon {
+  width: calc(2.8vw + 2.8vh);
+  height: calc(2.8vw + 2.8vh);
+  display: inline-block;
+  background-image: url("/app/static/imgs/github.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.footer__icon:nth-child(2) {
+  margin-left: calc(0.4vw + 0.4vh);
+  background-image: url("/app/static/imgs/twitter.svg");
+}
 .footer__text {
   font-family: monospace, sans-serif;
   font-style: normal;
   font-size: calc(0.9vw + 0.9vh);
   font-weight: 400;
   display: inline-block;
-  padding: calc(0.8vw + 0.8vh) 0;
+  padding: calc(1.2vw + 1.2vh) 0;
   color: rgb(255, 255, 255);
 }
 
